--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nativescript/core": "^7.3.0-next-03-04-2021-619345892",
     "@nativescript/firebase": "^11.1.3",
     "@nativescript/theme": "~2.3.0",
+    "nativescript-ui-dataform": "^7.0.4",
     "nativescript-ui-listview": "^9.1.0",
     "nativescript-ui-sidedrawer": "~9.0.0",
     "nativescript-vue": "~2.8.0",
